<resources>
    <string name="app_name">In And Out</string>
    <string name="place_order">Place an Order</string>
    <string name="double_double">Double Double</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="french_fries">French Fries</string>
    <string name="shakes">Shakes</string>

    <string name="fountain_drinks_pick_size">Fountain Drinks (pick size)</string>
    <string name="small_drink">Small</string>
    <string name="medium_drink">Medium</string>
    <string name="large_drink">Large</string>

    <string name="place_order_button">Place Order</string>
    
    <!-- Below are the strings for activity_summary.xml -->
    <string name="order_total">Order Total</string>
    <string name="items_ordered">Items Ordered</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="new_order_button">Start New Order</string>
</resources>
