<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/order_background"
    android:columnCount="2"
    android:rowCount="12"
    android:padding="20dp"
    android:useDefaultMargins="true"
    android:orientation="vertical"
    tools:context="edu.orangecoastcollege.cs273.balbert.inandout.OrderActivity">


    <TextView
        android:id="@+id/placeOrderTextView"
        android:text="@string/place_order"
        android:textSize="24sp"
        android:textColor="@color/text_black"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_columnSpan="2"
        android:layout_row="1" />

    <TextView
        android:id="@+id/doubleDoubleTextView"
        style="@style/textView"
        android:text="@string/double_double"
        android:layout_row="2" />

    <EditText
        android:id="@+id/doubleDoubleEditText"
        style="@style/editText"
        android:layout_row="2" />

    <TextView
        android:id="@+id/cheeseBurgerTextView"
        style="@style/textView"
        android:layout_row="3"
        android:text="@string/cheeseburger"/>

    <EditText
        android:id="@+id/cheeseBurgerEditText"
        style="@style/editText"
        android:layout_row="3" />

    <TextView
        android:id="@+id/frenchFriesTextView"
        style="@style/textView"
        android:layout_row="4"
        android:text="@string/french_fries" />

    <EditText
        android:id="@+id/frenchFriesEditText"
        style="@style/editText"
        android:layout_row="4" />

    <TextView
        android:id="@+id/shakesTextView"
        style="@style/textView"
        android:layout_row="5"
        android:text="@string/shakes" />

    <EditText
        android:id="@+id/shakesEditText"
        style="@style/editText"
        android:layout_row="5" />

    <TextView
        android:id="@+id/fountainDrinksPickSizeTextView"
        style="@style/textView"
        android:layout_row="6"
        android:text="@string/fountain_drinks_pick_size"/>

    <TextView
        android:id="@+id/smallDrinkTextView"
        style="@style/textView"
        android:layout_row="7"
        android:text="@string/small_drink" />

    <EditText
        android:id="@+id/smallDrinkEditText"
        style="@style/editText"
        android:layout_row="7" />

    <TextView
        android:id="@+id/mediumDrinkTextView"
        style="@style/textView"
        android:layout_row="8"
        android:text="@string/medium_drink" />

    <EditText
        android:id="@+id/mediumDrinkEditText"
        style="@style/editText"
        android:layout_row="8" />

    <TextView
        android:id="@+id/largeDrinkTextView"
        style="@style/textView"
        android:layout_row="9"
        android:text="@string/large_drink"/>
    <EditText
        android:id="@+id/largeDrinkEditText"
        style="@style/editText"
        android:layout_row="9" />

    <Button
        android:id="@+id/placeOrderButton"
        android:text="@string/place_order_button"
        android:padding="20dp"
        android:layout_row="10"
        android:onClick="placeOrder"/>


</GridLayout>
