<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/summary_background"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:padding="30dp"
    tools:context="edu.orangecoastcollege.cs273.balbert.inandout.SummaryActivity" >


    <TextView
        android:id="@+id/orderTotalTextView"
        android:layout_marginTop="90dp"
        android:layout_row="0"
        style="@style/summaryTextView"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/order_total"/>
    <TextView
        android:id="@+id/itemsOrderedTextView"
        android:layout_marginTop="40dp"
        android:layout_row="1"
        style="@style/summaryTextView"
        android:text="@string/items_ordered" />
    <TextView
        android:id="@+id/subtotalTextView"
        android:layout_row="2"
        style="@style/summaryTextView"
        android:text="@string/subtotal"/>
    <TextView
        android:id="@+id/taxTextView"
        android:layout_row="3"
        style="@style/summaryTextView"
        android:text="@string/tax"/>
    <Button
        android:id="@+id/startNewOrderButton"
        android:layout_marginTop="60dp"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/new_order_button"
        android:onClick="startNewOrder"/>

</GridLayout>
